Fix spacing

--- a/server/styles/styles.css
+++ b/server/styles/styles.css
@@ -37,6 +37,8 @@ pre#content {
   display: block;
   text-align: left;
   padding: 0;
+  
+  white-space: pre-wrap;
 }
 
 header.page-header {
@@ -59,4 +61,10 @@ header.page-header {
   border-left: 4px solid #333;
   padding: 5px;
   padding-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#submit-button {
+  margin-left: 15px;
 }
